NCC/judge/error/73/73_1.txt
/home/saurabh/credenz17/NCC/judge/user/73/1/73_1.cpp:1:17: error: ‘hgcgfg’ does not name a type
                 hgcgfg
                 ^
